[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77",
  "wheel>=0.37.1",
]

[project]
name = "cmd_queue"
description = "The cmd_queue module for a DAG of bash commands"
license = "Apache-2.0"
license-files = [
  "LICENSE",
]
authors = [
  { name = "Kitware Inc.", email = "kitware@kitware.com" },
  { name = "Jon Crall", email = "jon.crall@kitware.com" }
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dynamic = [
  "dependencies",
  "optional-dependencies",
  "version",
]
urls.Homepage = "https://gitlab.kitware.com/computer-vision/cmd_queue"
scripts.cmd_queue = "cmd_queue.__main__:main"

[tool.setuptools]
include-package-data = true
dynamic.dependencies.file = [
  "requirements/runtime.txt",
]
dynamic.optional-dependencies.airflow.file = [
  "requirements/airflow.txt",
]
dynamic.optional-dependencies.all.file = [
  "requirements/optional.txt",
  "requirements/airflow.txt",
]
dynamic.optional-dependencies.docs.file = [
  "requirements/docs.txt",
]
dynamic.optional-dependencies.linting.file = [
  "requirements/linting.txt",
]
dynamic.optional-dependencies.optional.file = [
  "requirements/optional.txt",
]
dynamic.optional-dependencies.tests.file = [
  "requirements/tests.txt",
]
dynamic.readme.file = [
  "README.rst",
]
dynamic.readme.content-type = "text/x-rst"
dynamic.version.attr = "cmd_queue.__version__"
package-data."*" = [
  "requirements/*.txt",
]
packages.find.where = [
  ".",
]
packages.find.include = [
  "cmd_queue*",
]


[tool.ruff]
target-version = "py310"
line-length = 80
format.indent-style = "space"
format.quote-style = "single"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-format = false
lint.select = [
  "E",
  "F",
  "I",
]
lint.ignore = [
  "E402",
  "E501",
]

[tool.codespell]
skip = [
  "./docs/build",
  "./*.egg-info",
  "./build",
  "./htmlcov",
]
count = true
quiet-level = 3
ignore-words-list = [
  "wont",
  "cant",
  "ANS",
  "doesnt",
  "arent",
  "ans",
  "thats",
  "datas",
  "isnt",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ty]
rules.unused-ignore-comment = "ignore"
rules.unused-type-ignore-comment = "ignore"
rules.unresolved-import = "ignore"

[tool.pytest]
ini_options.addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev --ignore-glob=docs"
ini_options.norecursedirs = ".git ignore build __pycache__ dev _skbuild docs"
ini_options.filterwarnings = [
  "default",
  "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
  "ignore:.*Define the __nice__ method for.*:Warning",
  "ignore:.*private pytest class or function.*:Warning",
]

[tool.coverage]
run.branch = true
report.exclude_lines = [
  ".*  # nocover",
  ".*  # pragma: no cover",
  ".*if six.PY2:",
  "^ *pass *$",
  "^ *raise",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if _debug:",
  "if 0:",
  "if trace is not None",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "verbose = .*",
]
report.omit = [
  "*/setup.py",
  "cmd_queue/__main__.py",
]

[tool.xcookie]
tags = [
  "kitware",
  "purepy",
  "gitlab",
]
mod_name = "cmd_queue"
repo_name = "cmd_queue"
author = "Kitware Inc., Jon Crall"
author_email = "kitware@kitware.com, jon.crall@kitware.com"
description = "The cmd_queue module for a DAG of bash commands"
min_python = "3.10"
url = "https://gitlab.kitware.com/computer-vision/cmd_queue"
license = "Apache 2"
dev_status = "beta"
use_uv = true
use_setup_py = false
use_pyproject_requirements = false
ci_extras.full-loose = [
  "airflow",
]
ci_extras.full-strict = [
  "airflow",
]
entry_points.console_scripts = [
  "cmd_queue = cmd_queue.__main__:main",
]
